deploy/kubernetes/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: locksmith
  labels:
    app: locksmith
    app.kubernetes.io/name: locksmith
    app.kubernetes.io/part-of: locksmith
    openshift.io/cluster-monitoring: 'true'
