deploy/kubernetes/04-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: locksmith-svc
  namespace: locksmith
  labels:
    app: locksmith
    app.kubernetes.io/name: locksmith
    app.kubernetes.io/part-of: locksmith
spec:
  ports:
    - port: 8080
      name: api
  selector:
    app: locksmith
